Added ugly and unportable patch that at least sometimes can check if the KIPI plugin we've just invoked is "KIPIJPEGLossLessPlugin::Plugin_JPEGLossless" and its action is "rotate_exif". If it is, we should set image orientation in our DB to "normal". Unfortunately KIPI Plugin maintainers haven't responded to my queries about providing saner interface.

BUG: 146927

svn path=/branches/extragear/kde3/graphics/kphotoalbum/; revision=741620